--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,10 +7,12 @@
     <ion-tab-button tab="tab2">
       <ion-icon name="pie"></ion-icon>
     </ion-tab-button>
+    <div *ngIf="k == 0">
+      <ion-tab-button tab="tab3">
+        <ion-icon name="bookmarks"></ion-icon>
+      </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="bookmarks"></ion-icon>
-    </ion-tab-button>
+    </div>
 
     <ion-tab-button tab="tab4">
       <ion-icon name="calendar"></ion-icon>
