--- a/src/app/tab6/tab6.page.html
+++ b/src/app/tab6/tab6.page.html
@@ -14,7 +14,7 @@
   <ion-list>
     <ion-item *ngFor="let atendido of atendidos | async" (click)="presentModal(atendido)">
       <ion-label>
-        <h3>{{atendido.Nome}}</h3>
+        <h3>{{atendido.nome}}</h3>
       </ion-label>
     </ion-item>
   </ion-list>
