--- a/src/app/tab7/tab7.page.html
+++ b/src/app/tab7/tab7.page.html
@@ -23,7 +23,7 @@
         <h2>{{terapeuta.nome}}</h2>
         <p>{{terapeuta.email}}</p>
       </ion-label>
-      
+
     </ion-item>
   </ion-list>
 
@@ -53,6 +53,20 @@
       <ion-label>
         <h2>{{adm.nome}}</h2>
         <p>{{adm.email}}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+
+  <ion-list>
+    <ion-list-header>
+      <ion-label>
+        Atendidos
+      </ion-label>
+    </ion-list-header>
+
+    <ion-item *ngFor="let atendido of atendidos | async" (click)="presentModal(atendido)">
+      <ion-label>
+        <h3>{{atendido.nome}}</h3>
       </ion-label>
     </ion-item>
   </ion-list>
