--- a/src/app/editar-usuario/editar-usuario.page.html
+++ b/src/app/editar-usuario/editar-usuario.page.html
@@ -43,20 +43,15 @@
       </ion-item>
 
       <ion-item *ngIf="tipoUsuario == 'pai'">
-        
-        <ion-select [(ngModel)]="nomeFilho" multiple>
+        <ion-label position="floating">Filho(s)</ion-label>
+        <ion-select [(ngModel)]="nomeFilho" placeholder="Selecione: " multiple>
           <ion-select-option *ngFor="let atendido of Atendidos | async" value="{{atendido.id}}">
             {{atendido.nome}}
           </ion-select-option>
         </ion-select>
       </ion-item>
 
-      <ion-item>
-          <ion-label>Destinatário</ion-label>
-          <ion-select [(ngModel)]="mDestino" placeholder="Selecione" multiple>
-            <ion-select-option *ngFor="let pessoa of pessoas | async">{{pessoa.nome}}: {{pessoa.email}}</ion-select-option>
-          </ion-select>
-        </ion-item>
+
 
       <ion-item *ngIf="tipoUsuario != 'atend'">
         <ion-label position="floating">Email</ion-label>
