--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -29,4 +29,13 @@
         </ion-card-content>
     </ion-card>
 
+
+    <ion-fab *ngIf="typo == 'adm'" vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button (click)="presentModal()">
+            <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
+
+
+
 </ion-content>
