--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -31,7 +31,7 @@
 
 
     <ion-fab *ngIf="typo == 'adm'" vertical="bottom" horizontal="end" slot="fixed">
-        <ion-fab-button (click)="presentModal()">
+        <ion-fab-button (click)="presentModal('edit')">
             <ion-icon name="add"></ion-icon>
         </ion-fab-button>
     </ion-fab>
