Adicionar Atendido -adm
Adiciona imagem e mais informações

--- a/src/app/editar-usuario/editar-usuario.page.html
+++ b/src/app/editar-usuario/editar-usuario.page.html
@@ -11,7 +11,9 @@
 
 <ion-content>
 
- 
+
+
+
   <div *ngIf="item == 'adicionar'">
     <ion-list>
       <ion-list-header>
@@ -19,8 +21,14 @@
           Adicionar Usuário
         </ion-label>
       </ion-list-header>
+      <div *ngIf="tipoUsuario == 'atend'">
+        <div class="centro">
+          <img *ngIf="imgMenino" class="conteudo" [src]="imgMenino" (click)="cam()">
+        </div>
+      </div>
 
       <ion-item>
+
 
         <ion-label color="medium" position="floating">Tipo de Usuário</ion-label>
         <ion-select [(ngModel)]="tipoUsuario">
@@ -32,47 +40,79 @@
       </ion-item>
 
 
-      <ion-item *ngIf="tipoUsuario != 'pai'">
-        <ion-label position="floating">Nome</ion-label>
-        <ion-input type="text" [(ngModel)]="nome" placeholder="Ex.: João Pedro"></ion-input>
-      </ion-item>
+      <div *ngIf="tipoUsuario == 'atend'">
+        <ion-item>
+          <ion-label position="floating">Nome</ion-label>
+          <ion-input type="text" [(ngModel)]="nome" placeholder="Ex.: João Pedro"></ion-input>
+        </ion-item>
 
-      <ion-item *ngIf="tipoUsuario == 'pai'">
-        <ion-label position="floating">Nome do responsável</ion-label>
-        <ion-input type="text" [(ngModel)]="nome" placeholder="Ex.: João Pedro"></ion-input>
-      </ion-item>
+        <ion-item>
+          <ion-label position="floating">Idade</ion-label>
+          <ion-input type="number" [(ngModel)]="idade" placeholder="Ex.: 14"></ion-input>
+        </ion-item>
 
-      <ion-item *ngIf="tipoUsuario == 'pai'">
-        <ion-label position="floating">Filho(s)</ion-label>
-        <ion-select [(ngModel)]="nomeFilho" placeholder="Selecione: " multiple>
-          <ion-select-option *ngFor="let atendido of Atendidos | async" value="{{atendido.id}}">
-            {{atendido.nome}}
-          </ion-select-option>
-        </ion-select>
-      </ion-item>
+        <ion-item>
 
+          <ion-label color="medium" position="floating">Grau de Autismo</ion-label>
+          <ion-select placeholder="Selecione" [(ngModel)]="grauAutismo">
+            <ion-select-option value="Leve">Leve</ion-select-option>
+            <ion-select-option value="Moderado">Moderado</ion-select-option>
+            <ion-select-option value="Severo">Severo</ion-select-option>
+            <ion-select-option value="Não Especificado">Não Especificado</ion-select-option>
+          </ion-select>
+        </ion-item>
 
-
-      <ion-item *ngIf="tipoUsuario != 'atend'">
-        <ion-label position="floating">Email</ion-label>
-        <ion-input type="email" [(ngModel)]="email" placeholder="Ex.: joao.pedro@gmail.com"></ion-input>
-      </ion-item>
-
-      <ion-item *ngIf="tipoUsuario != 'atend'">
-        <ion-label position="floating">CPF</ion-label>
-        <ion-input inputmode="numeric" [(ngModel)]="cpf" maxlength="11" type="number" placeholder="12345678912">
-        </ion-input>
-      </ion-item>
+      </div>
 
 
-      <ion-item *ngIf="tipoUsuario != 'atend'">
-        <ion-label position="floating">Confirmar CPF</ion-label>
-        <ion-input [(ngModel)]="concpf" maxlength="11" type="number" placeholder="12345678912"></ion-input>
-      </ion-item>
+      <div *ngIf="tipoUsuario == 'pai'">
+        <ion-item>
+          <ion-label position="floating">Nome do responsável</ion-label>
+          <ion-input type="text" [(ngModel)]="nome" placeholder="Ex.: João Pedro"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Filho(s)</ion-label>
+          <ion-select [(ngModel)]="nomeFilho" placeholder="Selecione: " multiple>
+            <ion-select-option *ngFor="let atendido of Atendidos | async" value="{{atendido.id}}">
+              {{atendido.nome}}
+            </ion-select-option>
+          </ion-select>
+        </ion-item>
+      </div>
+
+      <div *ngIf="tipoUsuario != 'atend'">
+        <ion-item *ngIf="tipoUsuario != 'pai'">
+          <ion-label position="floating">Nome</ion-label>
+          <ion-input type="text" [(ngModel)]="nome" placeholder="Ex.: João Pedro"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Email</ion-label>
+          <ion-input type="email" [(ngModel)]="email" placeholder="Ex.: joao.pedro@gmail.com"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">CPF</ion-label>
+          <ion-input inputmode="numeric" [(ngModel)]="cpf" maxlength="11" type="number" placeholder="12345678912">
+          </ion-input>
+        </ion-item>
+
+
+        <ion-item>
+          <ion-label position="floating">Confirmar CPF</ion-label>
+          <ion-input [(ngModel)]="concpf" maxlength="11" type="number" placeholder="12345678912"></ion-input>
+        </ion-item>
+      </div>
     </ion-list>
+
 
     <ion-button color="medium" expand="block" (click)="criarConta()">
       Adicionar novo usuário
     </ion-button>
+
+
+
+
   </div>
 </ion-content>
