Ajeitei Algumas coisas

--- a/src/app/agenda/agenda.page.html
+++ b/src/app/agenda/agenda.page.html
@@ -5,7 +5,7 @@
         <ion-icon slot="icon-only" name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title class=ion-text-left>{{ this.info.Nome}}</ion-title>
+    <ion-title class=ion-text-left>{{ this.info.nome}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
