--- a/src/app/perfil-meninos/perfil-meninos.page.scss
+++ b/src/app/perfil-meninos/perfil-meninos.page.scss
@@ -1,7 +1,13 @@
-ion-avatar {
-  
-  height: 30vh;
-  width: auto;
+.centro {
   margin: auto;
-  display: block;
+  background-color: rgba(0, 0, 0, 0);
+  height: 130px;
+  width: 100%;
+  display: flex;
+}
+.conteudo {
+  border-radius: 50%;
+  height: 120px;
+  width: 120px;
+  margin: auto;
 }
