--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,14 +9,11 @@
     </ion-title>
 </ion-toolbar>
 
-<ion-content>
-    <img [src]="imagem.i">
-    <p>{{imagem}}</p>
-    <p>{{imagem.i}}</p>
+<ion-content>    
     <div *ngFor="let noticia of noticias | async" (click)="presentAlert(noticia)">
         <ion-card class="aviso" *ngIf="typo == 'adm'">
             <ion-card-header>
-                <ion-card-title>{{noticia.titulo}}</ion-card-title>
+                <ion-card-subtitle>{{noticia.titulo}}</ion-card-subtitle>
             </ion-card-header>
 
             <ion-list>
@@ -40,7 +37,8 @@
         </ion-card>
         <ion-card class="aviso" *ngIf="typo == 'pai' && noticia.postar == true">
             <ion-card-header>
-                <ion-card-title>{{noticia.titulo}}</ion-card-title>
+                <ion-card-subtitle>{{noticia.titulo}}</ion-card-subtitle>
+
             </ion-card-header>
 
 
