--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -32,9 +32,9 @@
     </ion-list>
     <ion-list>
       <ion-item>
+        <ion-icon (click)="verPedidos('reunioes')" name="list-box"></ion-icon>
         <ion-label>Pedidos de Reuniões</ion-label>
         <ion-toggle (ionChange)="status()" [(ngModel)]="sReu" value="sReu" color="medium"></ion-toggle>
-        <ion-note (click)="verPedidos('reunioes')"> Ver Pedidos </ion-note>
       </ion-item>
     </ion-list>
 
