--- a/src/app/perfil-meninos/perfil-meninos.page.html
+++ b/src/app/perfil-meninos/perfil-meninos.page.html
@@ -12,7 +12,7 @@
 <ion-content>
   <ion-content>
     <div class="centro">
-      <img class="conteudo" [src]="item.foto" (click)="cam()">
+      <img class="conteudo" [src]="item.foto">
     </div>
 
     <ion-card>
@@ -21,8 +21,6 @@
           Dados da Criança
         </ion-card-subtitle>
       </ion-card-header>
-
-      <img *ngIf="imgPessoa" [src]="item.foto">
 
       <ion-item>
         <ion-label position="floating" color="medium">Nome:</ion-label>
