--- a/src/app/informe/informe.page.html
+++ b/src/app/informe/informe.page.html
@@ -32,7 +32,7 @@
 
     <ion-card-header>
 
-      <ion-card-title>Comentários e informações da terapia: </ion-card-title>
+      <ion-card-title>Comentários da terapia: </ion-card-title>
     </ion-card-header>
     <ion-card-content *ngFor="let comentario of comentarios | async">
       {{comentario.nome}}: {{ comentario.mensagem }}
