--- a/src/app/req/req.page.html
+++ b/src/app/req/req.page.html
@@ -26,11 +26,11 @@
       <ion-item>
         <ion-label position="floating">Tamanhos disponíveis</ion-label>
         <ion-select [(ngModel)]="tamanho" placeholder="Tamanho">
-          <ion-select-option value="pp">PP</ion-select-option>
-          <ion-select-option value="p">P</ion-select-option>
-          <ion-select-option value="m">M</ion-select-option>
-          <ion-select-option value="g">G</ion-select-option>s
-          <ion-select-option value="gg">GG</ion-select-option>
+          <ion-select-option value="PP">PP</ion-select-option>
+          <ion-select-option value="P">P</ion-select-option>
+          <ion-select-option value="M">M</ion-select-option>
+          <ion-select-option value="G">G</ion-select-option>s
+          <ion-select-option value="GG">GG</ion-select-option>
         </ion-select>
       </ion-item>
 
@@ -81,10 +81,10 @@
       <ion-item>
         <ion-label position="floating">Selecione:</ion-label>
         <ion-select [(ngModel)]="modulos" placeholder="Tipo de módulo">
-          <ion-select-option value="sobPos">Sobreposição</ion-select-option>
-          <ion-select-option value="duasEn">Duas Entradas</ion-select-option>
-          <ion-select-option value="parImg">Pareamento de Imagens</ion-select-option>
-          <ion-select-option value="enig">Enigmas</ion-select-option>
+          <ion-select-option value="Sobreposição">Sobreposição</ion-select-option>
+          <ion-select-option value="Duas Entradas">Duas Entradas</ion-select-option>
+          <ion-select-option value="Pareamentos de Imagens">Pareamento de Imagens</ion-select-option>
+          <ion-select-option value="Enigmas">Enigmas</ion-select-option>
         </ion-select>
       </ion-item>
 
