--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -23,7 +23,7 @@
                 </ion-col>
                 <ion-col size="7.5">
                     <ion-card-subtitle>{{evento.nomeEvento}}</ion-card-subtitle>
-                    <p class="ion-text-justify">{{evento.detalheEvento}}</p>
+                    <p>{{evento.detalheEvento}}</p>
                 </ion-col>
             </ion-row>
         </ion-card-content>
