--- a/src/app/perfil-meninos/perfil-meninos.page.html
+++ b/src/app/perfil-meninos/perfil-meninos.page.html
@@ -22,37 +22,37 @@
         </ion-card-subtitle>
       </ion-card-header>
 
-      <ion-item>
-        <ion-label position="floating" color="medium">Nome:</ion-label>
-        <br>
+
+      <ion-card-content>
+        <ion-label>
+          <b>Nome: </b>
+        </ion-label>
+
         <p>{{item.nome}}</p>
-      </ion-item>
 
-
-      <ion-item>
-        <ion-label color="medium" position="floating">Idade:</ion-label>
         <br>
+
+        <ion-label>
+          <b>Idade: </b>
+        </ion-label>
+
         <p>{{item.idade}}</p>
-      </ion-item>
 
-      <ion-item>
-        <ion-label color="medium" position="floating">Grau de Autismo</ion-label>
         <br>
+
+        <ion-label>
+          <b>Nivel de Autismo: </b>
+        </ion-label>
+
         <p>{{item.grauAutismo}}</p>
-      </ion-item>
-
-      <ion-item *ngIf="item.pais">
-        <ion-label color="medium" position="floating">Pais</ion-label>
         <br>
+        <ion-label>
+          <b>Pais: </b>
+        </ion-label>
+
         <p>{{item.pais}}</p>
-      </ion-item>
-
+      </ion-card-content>
     </ion-card>
-
     <ion-button (click)="presentModal()" expand="block" color="medium">Fazer Informe</ion-button>
-
-
-
-
 
   </ion-content>
