--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -18,22 +18,19 @@
     <ion-list>
       <ion-list-header>Status das Requisições</ion-list-header>
       <ion-item>
-        <ion-label>Pedidos de Fardamento</ion-label>
+        <ion-label (click)="verPedidos('fardamentos')">Pedidos de Fardamento</ion-label>
         <ion-toggle (ionChange)="status()" [(ngModel)]="sFar" value="sFar" color="medium"></ion-toggle>
-        <ion-note (click)="verPedidos('fardamentos')"> Ver Pedidos </ion-note>
       </ion-item>
     </ion-list>
     <ion-list>
       <ion-item>
-        <ion-label>Pedidos de Módulos</ion-label>
+        <ion-label (click)="verPedidos('modulos')">Pedidos de Módulos</ion-label>
         <ion-toggle (ionChange)="status()" [(ngModel)]="sMod" value="sMod" color="medium"></ion-toggle>
-        <ion-note (click)="verPedidos('modulos')"> Ver Pedidos </ion-note>
       </ion-item>
     </ion-list>
     <ion-list>
       <ion-item>
-        <ion-icon (click)="verPedidos('reunioes')" name="list-box"></ion-icon>
-        <ion-label>Pedidos de Reuniões</ion-label>
+        <ion-label (click)="verPedidos('reunioes')">Pedidos de Reuniões</ion-label>
         <ion-toggle (ionChange)="status()" [(ngModel)]="sReu" value="sReu" color="medium"></ion-toggle>
       </ion-item>
     </ion-list>
