--- a/src/app/tab7/tab7.page.html
+++ b/src/app/tab7/tab7.page.html
@@ -11,7 +11,6 @@
 
 <ion-content>
 
-
   <!--PARTE DOS TERAPEUTAS-->
   <ion-list>
     <ion-list-header>
@@ -55,23 +54,24 @@
         <p>{{adm.email}}</p>
       </ion-label>
     </ion-item>
-
-
   </ion-list>
 
   <ion-list>
-    <ion-list-header>
-      <ion-label>
-        Atendidos
-      </ion-label>
-    </ion-list-header>
+      <ion-list-header>
+        <ion-label>
+          Atendidos
+        </ion-label>
+      </ion-list-header>
+  
+      <ion-item *ngFor="let atendido of atendidos | async">
+        <ion-label>
+          <p>{{atendido.nome}}</p>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  
 
-    <ion-item *ngFor="let atendido of atendidos | async" (click)="presentModal(atendido)">
-      <ion-label>
-        <h3>{{atendido.nome}}</h3>
-      </ion-label>
-    </ion-item>
-  </ion-list>
+
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="presentModal('adicionar')">
