--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,32 +9,31 @@
     </ion-title>
 </ion-toolbar>
 
-<ion-content>    
-    <div *ngFor="let noticia of noticias | async" (click)="presentAlert(noticia)">
-        <ion-card class="aviso" *ngIf="typo == 'adm'">
+<ion-content>
+    <div>
+
+        <ion-card *ngFor="let noticia of noticias | async" (click)="presentAlert(noticia)">
             <ion-card-header>
                 <ion-card-subtitle>{{noticia.titulo}}</ion-card-subtitle>
+
             </ion-card-header>
 
-            <ion-list>
-                <ion-item>
-                    <ion-label>
 
-                        <p>{{noticia.descricao}}</p>
-                    </ion-label>
-                    <div *ngIf="noticia.postar == true">
-                        <ion-note color="success"> Visível</ion-note>
-                    </div>
+            <ion-card-content>
+                <p>{{noticia.descricao}}</p>
 
-                    <div *ngIf="noticia.postar == false">
-                        <ion-note color="danger"> Rascunho</ion-note>
-                    </div>
-                </ion-item>
-            </ion-list>
+                <div *ngIf="noticia.postar == true">
+                    <ion-note color="success"> Visível</ion-note>
+                </div>
 
-
+                <div *ngIf="noticia.postar == false">
+                    <ion-note slot="end" color="danger"> Rascunho</ion-note>
+                </div>
+            </ion-card-content>
 
         </ion-card>
+
+
         <ion-card class="aviso" *ngIf="typo == 'pai' && noticia.postar == true">
             <ion-card-header>
                 <ion-card-subtitle>{{noticia.titulo}}</ion-card-subtitle>
